sumo/tests/sumo/errors/network/junction/root__junction#type__false1/errors.sumo
Error: An unknown junction type occured: 'xxx' on junction '1'.
 Can not build according junction.
Quitting (on error).
